# ismena-custom-libc

crt/: crt0.S  crtn.S
include/libc/: string.h
include/libc/sys/: cdefs.h
libc/: CMakeLists.txt
libc/include/libc/: string.h
libc/include/libc/sys/: cdefs.h
libc/src/string/: memchr.c  memcmp.c  strchr.c
src/string/: memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  strchr.c  strlen.c
